# CppTradeSimulator

./: APISpec.md  APISpec_V1.0.md  CHANGELOG.md  CMakeLists.txt  README.md  SDD.md  SDD_V1.0.md  Skeleton_V1.0.md
docs/: APISpec_V1.1.1.md  APISpec_V1.1.2.md  APISpec_V1.1.md  APISpec_V1.2.md  SDD_V1.1.1.md  SDD_V1.1.2.md  SDD_V1.1.md  SDD_V1.2.md  Skeleton_V1.1.1.md  Skeleton_V1.1.2.md  Skeleton_V1.1.md  Skeleton_V1.2.md  UML_V1.0.md
docs/diagrams/uml_v1_0/: 01_类图.mmd  02_下单执行主流程TradeExecutorsubmitAndProcessorder.mmd  03_AccountManagercreateAccountid__initial.mmd  04_AccountManagerloadFromFilepath.mmd  05_AccountManagersaveToFilepath.mmd  06_OrderManagersubmitorder_submitRawrawOrder.mmd  07_OrderManagercancelid.mmd  08_MatchingEnginematchincoming.mmd  09_HistoryManagerrecordt__buyer__seller.mmd  10_HistoryManagerhistoryOfuser.mmd  11_HistoryManagerloadFromFilepath.mmd  12_HistoryManagersaveToFilepath.mmd  13_MoneyFromYuanyuan.mmd  14_Accountdepositamount.mmd  15_Accountdepositcents.mmd  16_Accountwithdrawamount.mmd  17_AccountpositionOfsym.mmd  18_AccountaddPositionsym__delta.mmd  19_Orderkind.mmd  20_OrderlimitPrice.mmd  21_OrdercloneRaw.mmd  22_MarketOrderkind.mmd  23_MarketOrderlimitPrice.mmd  24_MarketOrdercloneRaw.mmd  25_LimitOrderkind.mmd  26_LimitOrderlimitPrice.mmd  27_LimitOrdercloneRaw.mmd  28_OrderFactorycreateMarketOrderRawid__user__sym__side__qty.mmd  (+36 more)
src/: main.cpp
src/core/: AccountManager.cpp  HistoryManager.cpp  MatchingEngine.cpp  OrderManager.cpp  TradeExecutor.cpp
src/io/: Storage.cpp
src/order/: OrderFactory.cpp
test/: smoke_test.cpp
(+13 files in other folders)
